@@ -1,6 +1,10 @@
-FROM openjdk:8-jre-alpine
+FROM hmcts/cnp-java-base:openjdk-jre-8-alpine-1.1
 
-COPY build/install/div-case-progression-service /opt/app/
+ENV APP div-case-progression-service.jar
+ENV APPLICATION_TOTAL_MEMORY 512M
+ENV APPLICATION_SIZE_ON_DISK_IN_MB 53
+
+COPY build/libs/$APP /opt/app/
 
 WORKDIR /opt/app
 
@@ -8,4 +12,4 @@ HEALTHCHECK --interval=100s --timeout=100s --retries=10 CMD http_proxy="" wget -
 
 EXPOSE 4003
 
-ENTRYPOINT ["/opt/app/bin/div-case-progression-service"]
+CMD ["sh", "-c", "java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap ${JAVA_OPTS} -jar /opt/app/$APP"
